Fix broken styles

--- a/client/src/app/match-making/match-making.module.scss
+++ b/client/src/app/match-making/match-making.module.scss
@@ -22,6 +22,33 @@
 	}
 }
 
+.content {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	gap: 2vh;
+	margin-top: 5vh;
+	opacity: 0;
+	animation: fadeIn 250ms ease-in-out forwards;
+
+	p,
+	label {
+		color: white;
+		font-size: 2.5vh;
+		filter: drop-shadow(2px 2px 0 var(--text-dark));
+		user-select: none;
+	}
+
+	button {
+		font-size: 2vh;
+		width: 11vh;
+		height: 5vh;
+		line-height: 100%;
+		padding: 0 2vh;
+	}
+}
+
 .codeInput {
 	display: flex;
 	justify-content: center;
@@ -103,9 +130,12 @@
     height: unset;
 	}
 
-	button {
+	.spinner, button {
     height: unset;
-	}
+    width: 6vh;
+    align-items: center;
+    justify-content: center;
+	}	
 }
 
 .code {
